--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,29 @@
 {
-    "cSpell.words": [
-        "adafruit",
-        "atmega",
-        "COMPA",
-        "CUYA",
-        "DELTATIME",
-        "EXINT",
-        "Intialize",
-        "janky",
-        "leds",
-        "lengthed",
-        "ocie",
-        "pcicr",
-        "PCINT",
-        "pcmsk",
-        "prescale",
-        "PRESCALER",
-        "Rahix's",
-        "sipo",
-        "tccr",
-        "timsk",
-        "ufmt",
-        "Usart",
-        "USART",
-        "uwriteln"
-    ]
+  "cSpell.words": [
+    "adafruit",
+    "atmega",
+    "COMPA",
+    "CUYA",
+    "DELTATIME",
+    "EXINT",
+    "Intialize",
+    "janky",
+    "leds",
+    "lengthed",
+    "ocie",
+    "pcicr",
+    "PCINT",
+    "pcmsk",
+    "prescale",
+    "PRESCALER",
+    "Rahix's",
+    "sipo",
+    "tccr",
+    "timsk",
+    "ufmt",
+    "Uninit",
+    "Usart",
+    "USART",
+    "uwriteln"
+  ]
 }
