--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "alarm-clock"
+name = "tachometer"
 version = "0.1.0"
-authors = ["sheepy0125 <sheepy404@gmail.com>"]
+authors = ["sheepy0125 <sheepy@sheepy.moe>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [[bin]]
-name = "alarm-clock"
+name = "tachometer"
 test = false
 bench = false
 
@@ -15,11 +15,7 @@ ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
 avr-device = "0.5.2"
-shift-register-driver = { git = "https://github.com/JoshMcguigan/shift-register-driver" }
-ag-lcd = "0.2.0"
 heapless = "0.7.16"
-ht16k33 = { version = "0.4.0", default-features = false }
-adafruit-7segment = { version = "0.1.0", default-features = false  }
 shared-bus = "0.3.1"
 
 [dependencies.arduino-hal]
