--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ embedded-hal = "0.2.3"
 avr-device = "0.5.2"
 heapless = "0.7.16"
 shared-bus = "0.3.1"
+ht16k33 = { version = "0.4.0", default-features = false }
+adafruit-7segment = { version = "0.1.0", default-features = false }
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
