commit message i'm tired

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,12 @@
     "COMPA",
     "CUYA",
     "DELTATIME",
+    "eicra",
+    "EICRA",
+    "eimsk",
+    "EIMSK",
     "EXINT",
+    "heapless",
     "Intialize",
     "janky",
     "leds",
@@ -17,7 +22,9 @@
     "prescale",
     "PRESCALER",
     "Rahix's",
+    "repr",
     "sipo",
+    "smallvec",
     "tccr",
     "timsk",
     "ufmt",
